<resources>
    <string name="app_name">lr4</string>
    <string name="info">Программа осуществляет запись и чтение файлов следующих форматов:\n- txt\n- csv\n- xml\n- json</string>
    <string name="Button_file_open">Открыть файл</string>
    <string name="text_view_open">Выберите нужный тип файла:</string>
    <string name="txt">txt</string>
    <string name="csv">csv</string>
    <string name="xml">xml</string>
    <string name="json">json</string>
    <string name="txt_head">Файл формата .txt</string>
    <string name="csv_head">Файл формата .csv</string>
    <string name="xml_head_visual">Визуальное представление формата .xml</string>
    <string name="xml_head_text">Текстовое представление формата .xml</string>
    <string name="json_head_visual">Визуальное представление формата .json</string>
    <string name="json_head_text">Текстовое представление формата .json</string>
    <string name="save_file">Сохранить в файл</string>
    <string name="enter_text">Введите текст</string>
    <string name="add_parameter">Добавить студента</string>
    <string name="add_student_head">Добавление студента</string>
    <string name="change_student_head">Изменение студента</string>
    <string name="full_name">ФИО</string>
    <string name="gender">Пол</string>
    <string name="programming_lang">ЯП</string>
    <string name="save">Сохранить</string>
    <string name="update_from_file">Обновить из файла</string>
</resources>