<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/typeFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_view_open"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_marginTop="230dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/typeFile"
        android:layout_marginTop="15dp"
        >

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <Button
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt"
        />

    <Button
        android:id="@+id/csv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/csv"
        />

    <Button
        android:id="@+id/xml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xml"
        />

    <Button
        android:id="@+id/json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/json"
        />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>