<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:orientation="vertical"
    a:gravity="top"

    >

    <TextView
        a:id="@+id/textViewTxt"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:text="@string/txt_head"
        a:layout_marginTop="15dp"
        a:layout_marginHorizontal="15dp"
        a:layout_marginBottom="0dp"
        a:textSize="20sp"
        a:gravity="center"/>

    <EditText
        a:id="@+id/editTextTxt"
        a:layout_width="match_parent"
        a:layout_height="0dp"
        a:ems="10"
        a:gravity="start|top"
        a:inputType="textMultiLine"
        a:layout_weight="1"
        a:layout_margin="15dp"
        a:hint="@string/enter_text"
        a:textSize="15sp"
        a:background="@android:color/transparent"
        />

    <Button
        a:id="@+id/push_button"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:text="@string/save_file"
        a:layout_marginHorizontal="15dp"
        a:layout_marginBottom="15dp"
        a:textSize="15sp"/>
</LinearLayout>