<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:orientation="vertical"
    >

    <TextView
        a:id="@+id/change_add_head"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:text="@string/add_student_head"
        a:textSize="30sp"
        a:layout_margin="15dp"
        a:gravity="center"
        a:textColor="@color/black"
        />

    <LinearLayout
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginHorizontal="15dp"
        a:layout_marginBottom="7.5dp"
        a:orientation="horizontal">


        <TextView
            a:id="@+id/full_name_text_view"
            a:layout_width="0dp"
            a:layout_weight="1"
            a:layout_height="wrap_content"
            a:text="@string/full_name"
            a:gravity="top"
            a:textSize="15sp"
            />

        <EditText
            a:id="@+id/full_name_edit_text"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="7"
            a:ems="10"
            a:inputType="textPersonName"
            a:text=""
            a:textSize="15sp"
            />

    </LinearLayout>
    <LinearLayout
        a:layout_width="match_parent"
        a:layout_marginHorizontal="15dp"
        a:layout_marginVertical="7.5dp"
        a:layout_height="wrap_content"
        a:orientation="horizontal">

        <TextView
            a:id="@+id/gender_text_view"
            a:layout_width="0dp"
            a:layout_weight="1"
            a:layout_height="wrap_content"
            a:text="@string/gender"
            a:gravity="top"
            a:textSize="15sp"
            />

        <EditText
            a:id="@+id/gender_edit_text"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="7"
            a:ems="10"
            a:inputType="textPersonName"
            a:text=""
            a:textSize="15sp"
            />
    </LinearLayout>

    <LinearLayout
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginHorizontal="15dp"
        a:layout_marginVertical="7.5dp"
        a:orientation="horizontal">

        <TextView
            a:id="@+id/programming_lang_text_view"
            a:layout_width="0dp"
            a:layout_weight="1"
            a:layout_height="wrap_content"
            a:text="@string/programming_lang"
            a:gravity="top"
            a:textSize="15sp"
            />

        <EditText
            a:id="@+id/programming_lang_edit_text"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="7"
            a:ems="10"
            a:inputType="textPersonName"
            a:text=""
            a:textSize="15sp"
            />
    </LinearLayout>

    <LinearLayout
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:layout_marginHorizontal="15dp"
        a:layout_marginVertical="7.5dp"
        a:orientation="horizontal">

        <TextView
            a:id="@+id/ide_text_view"
            a:layout_width="0dp"
            a:layout_weight="1"
            a:layout_height="wrap_content"
            a:text="IDE"
            a:gravity="top"
            a:textSize="15sp"
            />

        <EditText
            a:id="@+id/ide_edit_text"
            a:layout_width="0dp"
            a:layout_height="wrap_content"
            a:layout_weight="7"
            a:ems="10"
            a:inputType="textPersonName"
            a:text=""
            a:textSize="15sp"
            />
    </LinearLayout>

    <Button
        a:id="@+id/save_student_button"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text="@string/save"
        a:layout_marginVertical="7.5dp"
        a:layout_gravity="center"
        a:gravity="center"

        />

</LinearLayout>